k8s/test-apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-apps
  labels:
    sonar-monitoring: "enabled"
