k8s/test-apps/http-metric-test-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-metric-test-app
spec:
  selector:
    app.kubernetes.io/name: http-metric-test-app
  ports:
    - protocol: TCP
      port: 8082
      name: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: http-metric-test-app
  name: http-metric-test-app
spec:
  replicas: 1
  serviceName: http-metric-test-app
  selector:
    matchLabels:
      app.kubernetes.io/name: http-metric-test-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-metric-test-app
    spec:
      containers:
        - image: http-metric-test-app
          name: http-metric-test-app
