k8s/test-apps/test-metric-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-metric-app
spec:
  selector:
    app.kubernetes.io/name: test-metric-app
  ports:
    - protocol: TCP
      port: 2020
      name: metrics
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: test-metric-app
  name: test-metric-app
spec:
  replicas: 1
  serviceName: test-metric-app
  selector:
    matchLabels:
      app.kubernetes.io/name: test-metric-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-metric-app
    spec:
      containers:
        - image: test-metric-app
          name: test-metric-app
          securityContext:
            allowPrivilegeEscalation: false
